--- a/source/application/Runner/Tarsvin.Runner.csproj
+++ b/source/application/Runner/Tarsvin.Runner.csproj
@@ -77,21 +77,18 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DllInfo.cs" />
-    <Compile Include="Executor.cs" />
-    <Compile Include="GlobalTestStates.cs" />
-    <Compile Include="IndividualFeatureTestState.cs" />
-    <Compile Include="IndividualTestState.cs" />
+    <Compile Include="Engine\Executor.cs" />
+    <Compile Include="Report\GlobalTestStates.cs" />
+    <Compile Include="Report\IndividualFeatureTestState.cs" />
+    <Compile Include="Report\IndividualTestState.cs" />
     <Compile Include="Interfaces\IRunner.cs" />
     <Compile Include="Options.cs" />
     <Compile Include="ProgramYAR.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReRunCase.cs" />
-    <Compile Include="Runner.cs" />
-    <Compile Include="RunnerHelper.cs" />
-    <Compile Include="Solution.cs" />
+    <Compile Include="Engine\Runner.cs" />
     <Compile Include="StepLoader.cs" />
-    <Compile Include="XmlResultWriter.cs">
+    <Compile Include="Report\XmlResultWriter.cs">
       <SubType>Code</SubType>
     </Compile>
   </ItemGroup>
@@ -133,6 +130,7 @@
       <Name>Tarsvin.StepBuilder</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
