--- a/source/application/Runner/Tarsvin.Runner.csproj
+++ b/source/application/Runner/Tarsvin.Runner.csproj
@@ -86,6 +86,7 @@
     <Compile Include="ProgramYAR.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Engine\Runner.cs" />
+    <Compile Include="Report\Result.cs" />
     <Compile Include="StepLoader.cs" />
     <Compile Include="Report\XmlResultWriter.cs">
       <SubType>Code</SubType>
